adding cashapp pic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Cory Agurs</title>
         <!-- Favicon-->
-        <link rel="image" type="jpg" href="\assets\img\Khloe n pop c.jpeg" />
+        <link rel="image" type="jpg" href="assets\img\website_logo_solid_background.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#contact"><img src="assets\muse.JPG" alt="..." /></a>
+                <a class="navbar-brand" href="#contact"><img src="assets\img\website_logo_solid_background.png" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="masthead-subheading"><i>Life Long Learning</i></div>
                 <div class="masthead-heading text-uppercase">Welcome to Cory's World</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Link Up</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#contact">Link Up</a>
             </div>
         </header>
         <!-- Services-->
@@ -49,7 +49,7 @@
             <div class="container">
                 <div class="text-center">
                     <h1 class="section-heading text-uppercase">Services</h1>
-                    <h2 class="section-subheading text-muted"><b>Computer Programming</b></h2>
+                    <h2 class="section-subheading text-muted"><b>Computer Engineering</b></h2>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -87,7 +87,7 @@
                     <h4 class="section-subheading text-muted">Python, C, C#, C++, HTML, CSS, JavaScript, Node.js, Dart, .NET, Go, Swift, PHP, SQL, Flutter, Linux</h4>
                     </br>
                         <h2>SO WHY MUST I WORK IN THE TECH WORLD?</h2></br>
-                        Because I want to show that I was in the wrong environment and had the wrong dependencies 
+                        I want validation that I was created in the wrong environment and had the wrong dependencies 
                         I had the dependencies of the environment that I was in, luckly transcended that environment. It was hard but I have a hard drive with a lot of memory and now my dependencies are helping me run smoothly with S.O.L.I.D principles. Learning and problem solving have both been dependencies of mine and they have helped to driving me to a success status in all of my jobs.</h3>
                         
                 </div>
@@ -234,17 +234,13 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <h4>
-                                Be Part
-                                <br />
-                                Of My
-                                <br />
-                                Story!
-                            </h4>
-                        </div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets\img\cashapp.jpg" alt="..." /></div>
                     </li>
                 </ul>
+                <div class="text-center">
+                    <h3 class="section-subheading text-muted">$HoodNews4</h3>
+                    <h2 class="section-heading text-uppercase">Donations are welcomed and respected</h2>
+                </div>
             </div>
         </section>
         <!-- Team-->
