--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             <div class="container">
                 <div class="text-center">
                     <h1 class="section-heading text-uppercase">Portfolio</h1>
-                    <h4 class="section-subheading text-muted">Python, C, C#, C++, HTML, CSS, JavaScript, Node.js, Dart, .NET, Go, Swift, PHP, SQL, Flutter, Linux</h4>
+                    <h4 class="section-subheading text-muted">Python, C, C#, C++, HTML, CSS, JavaScript, Node.js, Dart, .NET, Go, Swift, PHP, SQL, Flutter, Flask, GIT, Linux</h4>
                     </br>
                         <h2>SO WHY MUST I WORK IN THE TECH WORLD?</h2></br>
-                        I want validation that I was created in the wrong environment and had the wrong dependencies 
-                        I had the dependencies of the environment that I was in, luckly transcended that environment. It was hard but I have a hard drive with a lot of memory and now my dependencies are helping me run smoothly with S.O.L.I.D principles. Learning and problem solving have both been dependencies of mine and they have helped to driving me to a success status in all of my jobs.</h3>
+                        First because I'm a geek, I love to learning new things, and computers are organic to me, they make sense... Also I'm here to validate the power of environments. I relied on the wrong dependencies, 
+                        I had the dependencies of the environment that I was in, luckly I transcended that environment. It was hard but I have a hard drive with a yottabyte of memory and now my dependencies are enabling me run smoothly with S.O.L.I.D principles. Understanding and problem solving have both been dependencies of mine and they have helped to driving me to a success status in all of my endeavors.</h3>
                         
                 </div>
                 <div class="row">
@@ -99,7 +99,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets\2020-06-21 17.50.54.jpg" alt="..." />
+                                <img class="img-fluid" src="assets\YourPhoto_0122 (2).JPG" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Learning</div>
@@ -253,7 +253,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets\img\khloe.jpg" alt="..." />
+                            <img class="mx-auto rounded-circle" src="assets\2021-02-24 12.04.57-1 (3).jpg" alt="..." />
                             <h4>Khloe</h4>
                             <p class="text-muted">Motivational Team Lead</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
@@ -505,7 +505,7 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <h2 class="text-uppercase">Original Art</h2>
-                                    <p class="item-intro text-muted">Ebonie</p>
+                                    <p class="item-intro text-muted">Ebonie Clayton</p>
                                     <img class="img-fluid d-block mx-auto" src="assets\butchEbonie.jpeg" alt="..." />
                                     <p>The grace and beauty of the mixture of color to create and mimic moments. Sadly our databases have plenty potential but little clean data, instead it’s constantly updated with misinformation and malware causing programs to collide instead of joining. Some databases are full of useful data that has been cleaned but it’s hard to access.</p>
                                     <ul class="list-inline">
