--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">We are the Agurs and we got flavor.</p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Leveraging technology to drive business success!</p></div>
                 </div>
             </div>
         </section>
